# visionstudio_ai

./: .env.example  .gitignore  .pre-commit-config.yaml  API_DOCUMENTATION.md  ARCHITECTURE.md  AUDIT_REPORT.md  BUILD_COMPLETE.md  CHANGELOG.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  DEPLOYMENT.md  LICENSE  MANIFEST.md  Makefile  PROJECT_SUMMARY.md  QUICK_REFERENCE.md  README.md  SCALING.md  SECURITY.md  TROUBLESHOOTING.md  docker-compose.prod.yml  setup.sh
.github/: CODEOWNERS  FUNDING.yml  dependabot.yml  release-drafter.yml
.github/workflows/: ci.yml
backend/: .env.example  Dockerfile  alembic.ini  pyproject.toml  pytest.ini  requirements-dev.txt  requirements.txt  seed.py
backend/alembic/: env.py
backend/alembic/versions/: 001_base_tables.py
backend/app/: database.py  main.py  models.py
backend/app/routers/: admin.py  animate.py  auth.py  edit.py  generate.py  projects.py  styles.py  upload.py  websocket.py
backend/app/services/: moderation.py  push.py  rate_limiter.py  storage.py
backend/app/workers/: animation.py  celery_app.py  editing.py  generation.py
backend/tests/: conftest.py  test_auth.py  test_generate.py
docker/: docker-compose.yml  nginx.conf
frontend/: .env.example  .env.local.example  .eslintrc.json  Dockerfile  next.config.js  package-lock.json  package.json  tailwind.config.ts  vercel.json  vitest.config.ts
frontend/public/: sw.js  (+2 more)
gpu-worker/: Dockerfile  main.py
k8s/: backend.yaml  configmap.yaml  frontend.yaml  gpu-worker.yaml  hpa.yaml  ingress.yaml  namespace.yaml  secret.yaml
monitoring/: grafana-dashboard.json  prometheus.yml
scripts/: backup.sh  deploy.sh  health-check.sh
terraform/: main.tf  variables.tf
tests/: load-test.js
wireframes/: WIREFRAMES.md
(+83 files in other folders)
